--- a/source/files/styles/partials/_base.scss
+++ b/source/files/styles/partials/_base.scss
@@ -1,3 +1,5 @@
+html, body { margin: 0; padding: 0; }
+
 html {
 	height: 100%;
 	overflow-y: scroll;
@@ -11,13 +13,13 @@ body {
 	background: $milk;
 	padding: $base_padding * 5;
 	min-height: 100%;
-	
-	/*
-	// Makes Safari look shitty:
-	-webkit-font-smoothing: antialiased;
-	        font-smoothing: antialiased;
-	*/
 	text-rendering: optimizeLegibility;
+	
+	@media (max-width: #{relative(749)}rem) {
+		
+		& { padding: #{relative($base_padding * 2)}rem; }
+		
+	}
 	
 }
 
